build: Add hex file generation and merge feature
Offset values are from the c header definitions,
no duplicated definitions required in cmake and
c headers. If needed, a combined hex
could be generated in the end of the build.

Each platform should config the following cmake variables
to use this feature:
TFM_MERGE_HEX_FILES - Bool, enable merged hex generation
TFM_S_HEX_FILE_PATH - Path of the secure merged hex
TFM_S_HEX_MERGE_LIST - List of the secure targets to merge

Change-Id: I92a1797808bbd12ee5e0d3870056a22affe9b69b
Signed-off-by: Dávid Házi <david.hazi@arm.com>

--- a/bl1/bl1_2/CMakeLists.txt
+++ b/bl1/bl1_2/CMakeLists.txt
@@ -182,3 +182,11 @@ add_custom_command(OUTPUT bl2_signed.bin
                     $<$<BOOL:${TFM_BL1_2_IMAGE_ENCRYPTION}>:--kdf_alg=$<IF:$<BOOL:${TFM_BL1_SOFTWARE_CRYPTO}>,hkdf,sp800-108_cmac>>
     COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_BINARY_DIR}/bl2_signed.bin ${bin_dir}
 )
+
+add_convert_to_offset_hex_target(bl2_signed
+        INPUT_FILE          ${bin_dir}/bl2_signed.bin
+        OFFSET_MACRO_NAME   BL2_IMAGE_LOAD_ADDRESS
+        INCLUDE_BL2_HEADER  FALSE
+        MIRROR_FILE         $<TARGET_PROPERTY:bl2,LINK_DEPENDS>
+        OUTPUT_FILE         ${bin_dir}/bl2_signed.hex
+)
