--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,6 +56,7 @@ sign_data = "tfm_tools.sign_data:main"
 encrypt_data = "tfm_tools.encrypt_data:main"
 c_struct = "tfm_tools.c_struct:main"
 tfm_gen_armclang_shared_symbols = "tfm_tools.tfm_gen_armclang_shared_symbols:main"
+hex_generation = "tfm_tools.hex_generation:main"
 
 rse_create_blob_message = "rse_scripts.create_blob_message:main"
 rse_create_cm_provisioning_bundle = "rse_scripts.create_cm_provisioning_bundle:main"
