--- a/platform/ext/common/gcc/tfm_isolation_s.ld.template
+++ b/platform/ext/common/gcc/tfm_isolation_s.ld.template
@@ -38,15 +38,6 @@
 #define STACKSEAL_SIZE  0x0
 #endif
 
-{# Check whether DTCM needs to be included. #}
-{# We loop through here because break and continue are only available via the Loop Controls extension #}
-{% set outer_namespace = namespace(use_dtcm=false) %}
-{% for partition in partitions %}
-    {% if partition.manifest.place_in_dtcm %}
-        {% set outer_namespace.use_dtcm = true %}
-    {% endif %}
-{% endfor %}
-
 MEMORY
 {
   FLASH    (rx)  : ORIGIN = S_CODE_START, LENGTH = S_CODE_SIZE
@@ -56,10 +47,13 @@ MEMORY
 #endif
 #ifdef S_RUNTIME_ITCM_START
   ITCM     (rx)  : ORIGIN = S_RUNTIME_ITCM_START, LENGTH = S_RUNTIME_ITCM_SIZE
+  #define ITCM_FILES *tfm_spm*
+#else
+  #define ITCM_FILES
 #endif
-{% if outer_namespace.use_dtcm %}
+#ifdef S_RUNTIME_DTCM_START
   DTCM     (rw)  : ORIGIN = S_RUNTIME_DTCM_START, LENGTH = S_RUNTIME_DTCM_SIZE
-{% endif %}
+#endif
 }
 
 /* For Cortex-M0+ VTOR: 256-byte vector table is at the offset 0x00 of the image.
@@ -215,25 +209,6 @@ SECTIONS
 {% endfor %}
     } > FLASH
 
-#ifdef S_RUNTIME_ITCM_START
-    /* Position tag: Start of SPM code (privileged) */
-    saved_location_counter = .;
-    . = ORIGIN(ITCM);
-    . = ALIGN(TFM_LINKER_SPM_CODE_ALIGNMENT);
-    Image$$PT_SPM_CODE_START$$Base = .;
-
-    .ER_SPM_CODE . :
-    {
-        *tfm_spm*:(SORT_BY_ALIGNMENT(.text*))
-        *tfm_spm*:(SORT_BY_ALIGNMENT(.rodata*))
-    } > ITCM AT > FLASH
-
-    /* Position tag: End of SPM code (privileged) */
-    . = ALIGN(TFM_LINKER_SPM_CODE_ALIGNMENT);
-    Image$$PT_SPM_CODE_END$$Base = .;
-    . = saved_location_counter;
-#endif
-
     .ARM.extab :
     {
         *(.ARM.extab* .gnu.linkonce.armextab.*)
@@ -288,9 +263,9 @@ SECTIONS
 {% endfor %}
 
 #ifdef S_RUNTIME_ITCM_START
-        LONG (LOADADDR(.ER_SPM_CODE))
-        LONG (ADDR(.ER_SPM_CODE))
-        LONG (SIZEOF(.ER_SPM_CODE) / 4)
+        LONG (LOADADDR(.ER_ITCM_CODE))
+        LONG (ADDR(.ER_ITCM_CODE))
+        LONG (SIZEOF(.ER_ITCM_CODE) / 4)
 #endif
 
 #ifdef S_RAM_CODE_START
@@ -317,7 +292,7 @@ SECTIONS
         /* Capture all remaining code (except RAM code) in the privileged TF-M
          * code region.
          */
-        *(SORT_BY_ALIGNMENT(EXCLUDE_FILE(*libflash_drivers*) .text*))
+        *(SORT_BY_ALIGNMENT(EXCLUDE_FILE(*libflash_drivers* ITCM_FILES) .text*))
     } > FLASH
 
 #ifdef RAM_VECTORS_SUPPORT
@@ -346,7 +321,7 @@ SECTIONS
     /* Collect all RO-data into a single unprivileged region */
     .ER_RO_DATA . :
     {
-        *(SORT_BY_ALIGNMENT(EXCLUDE_FILE(*libflash_drivers*) .rodata*))
+        *(SORT_BY_ALIGNMENT(EXCLUDE_FILE(*libflash_drivers* ITCM_FILES) .rodata*))
     } > FLASH
 
     /**** Section for holding partition RO load data */
@@ -451,12 +426,10 @@ SECTIONS
 {% for partition in partitions %}
     {% if partition.manifest.type == 'APPLICATION-ROT' %}
 
-    /* Position tag: Start of Application RoT partition's private data */
-    . = ALIGN(TFM_LINKER_PT_AROT_PART_PRIVATE_DATA_ALIGNMENT);
-    Image$$PT_{{partition.manifest.name}}_PRIVATE_DATA_START$$Base = .;
-
-    .ER_{{partition.manifest.name}}_DATA . :
+    .ER_{{partition.manifest.name}}_DATA : ALIGN(TFM_LINKER_PT_AROT_PART_PRIVATE_DATA_ALIGNMENT)
     {
+    /* Position tag: Start of Application RoT partition's private data */
+    Image$$PT_{{partition.manifest.name}}_PRIVATE_DATA_START$$Base = .;
     {% if partition.attr.linker_pattern.library_list %}
         {% for pattern in partition.attr.linker_pattern.library_list %}
         {{pattern}}:(SORT_BY_ALIGNMENT(.data*))
@@ -471,7 +444,7 @@ SECTIONS
         . = ALIGN(4);
     } > RAM AT > FLASH
 
-    .ER_{{partition.manifest.name}}_BSS ALIGN(4) (NOLOAD) :
+    .ER_{{partition.manifest.name}}_BSS (NOLOAD) : ALIGN(4)
     {
         start_of_{{partition.manifest.name}}_bss = .;
     {% if partition.attr.linker_pattern.library_list %}
@@ -557,15 +530,11 @@ SECTIONS
 #endif
 
 {% for partition in partitions %}
-    {% if not partition.manifest.place_in_dtcm %}
     {% if partition.manifest.type == 'PSA-ROT' %}
-
-    /* Position tag: Start of PSA RoT partition's private data */
-    . = ALIGN(TFM_LINKER_PT_PROT_PART_PRIVATE_DATA_ALIGNMENT);
-    Image$$PT_{{partition.manifest.name}}_PRIVATE_DATA_START$$Base = .;
-
-    .ER_{{partition.manifest.name}}_DATA . :
+    .ER_{{partition.manifest.name}}_DATA : ALIGN(TFM_LINKER_PT_PROT_PART_PRIVATE_DATA_ALIGNMENT)
     {
+        /* Position tag: Start of PSA RoT partition's private data */
+        Image$$PT_{{partition.manifest.name}}_PRIVATE_DATA_START$$Base = .;
     {% if partition.attr.linker_pattern.library_list %}
         {% for pattern in partition.attr.linker_pattern.library_list %}
         {{pattern}}:(SORT_BY_ALIGNMENT(.data*))
@@ -578,68 +547,14 @@ SECTIONS
     {% endif %}
         *({{partition.manifest.name}}_PSA-ROT_ATTR_RW)
         . = ALIGN(4);
-    } > RAM AT > FLASH
-
-    .ER_{{partition.manifest.name}}_BSS ALIGN(4) (NOLOAD) :
-    {
-        start_of_{{partition.manifest.name}}_bss = .;
-    {% if partition.attr.linker_pattern.library_list %}
-        {% for pattern in partition.attr.linker_pattern.library_list %}
-        {{pattern}}:(SORT_BY_ALIGNMENT(.bss*))
-        {{pattern}}:(COMMON)
-        {% endfor %}
-    {% endif %}
-    {% if partition.attr.linker_pattern.object_list %}
-        {% for pattern in partition.attr.linker_pattern.object_list %}
-        {{pattern}}(SORT_BY_ALIGNMENT(.bss*))
-        {{pattern}}(COMMON)
-        {% endfor %}
-    {% endif %}
-        *({{partition.manifest.name}}_PSA-ROT_ATTR_ZI)
-        . += (. - start_of_{{partition.manifest.name}}_bss) ? 0 : 4;
-        . = ALIGN(4);
-    } > RAM
-
-    /* Position tag: End of PSA RoT partition's private data */
-    . = ALIGN(TFM_LINKER_PT_PROT_PART_PRIVATE_DATA_ALIGNMENT);
-    Image$$PT_{{partition.manifest.name}}_PRIVATE_DATA_END$$Base = .;
-
-    {% endif %}
-    {% endif %}
-{% endfor %}
-
-{% if outer_namespace.use_dtcm %}
-    saved_location_counter = .;
-    . = ORIGIN(DTCM);
-{% endif %}
-
-{% for partition in partitions %}
     {% if partition.manifest.place_in_dtcm %}
-    {% if partition.manifest.type == 'PSA-ROT' %}
-
-    /* Position tag: Start of PSA RoT partition's private data */
-    . = ALIGN(TFM_LINKER_PT_PROT_PART_PRIVATE_DATA_ALIGNMENT);
-    Image$$PT_{{partition.manifest.name}}_PRIVATE_DATA_START$$Base = .;
-
-    .ER_{{partition.manifest.name}}_DATA . :
-    {
-    {% if partition.attr.linker_pattern.library_list %}
-        {% for pattern in partition.attr.linker_pattern.library_list %}
-        {{pattern}}:(SORT_BY_ALIGNMENT(.data*))
-        {% endfor %}
+        } > DTCM AT > FLASH
+    {% else %}
+        } > RAM AT > FLASH
     {% endif %}
-    {% if partition.attr.linker_pattern.object_list %}
-        {% for pattern in partition.attr.linker_pattern.object_list %}
-        {{pattern}}(SORT_BY_ALIGNMENT(.data*))
-        {% endfor %}
-    {% endif %}
-        *({{partition.manifest.name}}_PSA-ROT_ATTR_RW)
-        . = ALIGN(4);
-    } > DTCM AT > FLASH
 
-    .ER_{{partition.manifest.name}}_BSS ALIGN(4) (NOLOAD) :
+    .ER_{{partition.manifest.name}}_BSS (NOLOAD) : ALIGN(4)
     {
-        start_of_{{partition.manifest.name}}_bss = .;
     {% if partition.attr.linker_pattern.library_list %}
         {% for pattern in partition.attr.linker_pattern.library_list %}
         {{pattern}}:(SORT_BY_ALIGNMENT(.bss*))
@@ -653,21 +568,16 @@ SECTIONS
         {% endfor %}
     {% endif %}
         *({{partition.manifest.name}}_PSA-ROT_ATTR_ZI)
-        . += (. - start_of_{{partition.manifest.name}}_bss) ? 0 : 4;
         . = ALIGN(4);
-    } > DTCM
-
-    /* Position tag: End of PSA RoT partition's private data */
-    . = ALIGN(TFM_LINKER_PT_PROT_PART_PRIVATE_DATA_ALIGNMENT);
-    Image$$PT_{{partition.manifest.name}}_PRIVATE_DATA_END$$Base = .;
-
+        /* Position tag: End of PSA RoT partition's private data */
+        Image$$PT_{{partition.manifest.name}}_PRIVATE_DATA_END$$Base = .;
+    {% if partition.manifest.place_in_dtcm %}
+        } > DTCM AT > FLASH
+    {% else %}
+        } > RAM AT > FLASH
     {% endif %}
     {% endif %}
 {% endfor %}
-
-{% if outer_namespace.use_dtcm %}
-    . = saved_location_counter;
-{% endif %}
 
     .TFM_DATA ALIGN(4) :
     {
@@ -677,7 +587,36 @@ SECTIONS
         . = ALIGN(4);
     } > RAM AT > FLASH
 
-    .TFM_BSS ALIGN(4) (NOLOAD) :
+#ifdef S_RUNTIME_ITCM_START
+    .ER_ITCM_CODE :
+    {
+        ITCM_FILES:(SORT_BY_ALIGNMENT(.text*))
+        ITCM_FILES:(SORT_BY_ALIGNMENT(.rodata*))
+        . = ALIGN(4);
+    } > ITCM AT > FLASH
+
+#ifdef CONFIG_TFM_REUSE_COPY_AREA_FOR_SP_STACKS
+    .tfm_runtime_sp_stacks (NOLOAD) : ALIGN(4)
+    {
+        Image$$PT_OVERLAY_AREA_BEGIN$$Base = .;
+        KEEP(*(.tfm_runtime_sp_stacks*))
+    } > FLASH
+
+    /* Place an empty area after the copied area to extend it to fit the SP stacks */
+    .ER_AREA_EXTENSION :
+    {
+        reusable_area = . - Image$$PT_OVERLAY_AREA_BEGIN$$Base;
+        /* The area must not be negative! */
+        . += (reusable_area>= SIZEOF(.tfm_runtime_sp_stacks))
+                ? 0
+                : (SIZEOF(.tfm_runtime_sp_stacks) - reusable_area);
+        . = ALIGN(8);
+    } > FLASH
+    Image$$PT_OVERLAY_AREA_END$$Base = .;
+#endif
+#endif
+
+    .TFM_BSS (NOLOAD) : ALIGN(4)
     {
         __bss_start__ = .;
 
