Build: Add CMake option to build TFM with ADAC as runtime service
Define a build option PSA_ADAC_AS_TFM_RUNTIME_SERVICE which decides
whether ADAC is integrated as TF-M runtime service or in bootloader.

Signed-off-by: Maulik Patel <maulik.patel@arm.com>
Change-Id: Iedac1a9e69fdd87191609a49a7bf03ffd361e804

--- a/bl2/CMakeLists.txt
+++ b/bl2/CMakeLists.txt
@@ -191,6 +191,7 @@ target_compile_definitions(bl2
     PRIVATE
         $<$<BOOL:${DEFAULT_MCUBOOT_FLASH_MAP}>:DEFAULT_MCUBOOT_FLASH_MAP>
         $<$<BOOL:${PLATFORM_PSA_ADAC_SECURE_DEBUG}>:PLATFORM_PSA_ADAC_SECURE_DEBUG>
+        $<$<BOOL:${PSA_ADAC_AS_TFM_RUNTIME_SERVICE}>:PSA_ADAC_AS_TFM_RUNTIME_SERVICE>
         $<$<BOOL:${TEST_BL2}>:TEST_BL2>
         $<$<BOOL:${TFM_PARTITION_FIRMWARE_UPDATE}>:TFM_PARTITION_FIRMWARE_UPDATE>
         $<$<AND:$<BOOL:${CONFIG_TFM_BOOT_STORE_MEASUREMENTS}>,$<NOT:$<BOOL:${CONFIG_TFM_BOOT_STORE_ENCODED_MEASUREMENTS}>>>:TFM_MEASURED_BOOT_API>
