BL2: Package bl2 scripts
Use bl2 python package for script dependencies, add entry point for
`wrapper.py` and add entry point for bl2 scripts to tf-m's
`pyproject.toml`

Signed-off-by: Mudit Sharma <mudit.sharma@arm.com>
Change-Id: I631936ddca1799b4c5e89109dbdbea4fbbd7b0c9

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,9 @@ docs = [
 ]
 
 [project.scripts]
+mcuboot_imagesign_wrapper = "bl2.wrapper:main"
+mcuboot_imagesign_assemble = "bl2.assemble:main"
+
 c_include = "tfm_tools.c_include:main"
 c_macro = "tfm_tools.c_macro:main"
 sign_then_encrypt_data = "tfm_tools.sign_then_encrypt_data:main"
