--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,9 @@ docs = [
 mcuboot_imagesign_wrapper = "bl2.wrapper:main"
 mcuboot_imagesign_assemble = "bl2.assemble:main"
 
+bl1_1_create_bl1_2_image = "bl1.create_bl1_2_img:main"
+bl1_1_create_provisioning_bundle = "bl1.create_provisioning_bundle:main"
+
 c_include = "tfm_tools.c_include:main"
 c_macro = "tfm_tools.c_macro:main"
 sign_then_encrypt_data = "tfm_tools.sign_then_encrypt_data:main"
@@ -67,11 +70,12 @@ rse_create_plain_data_handler_provisioning_bundle = "rse_scripts.create_plain_da
 rse_create_routing_tables_source_file = "rse_scripts.create_routing_tables_source_file:main"
 
 [tool.setuptools]
-packages = ["tfm_tools", "bl2", "rse", "rse_scripts"]
+packages = ["tfm_tools", "bl2", "bl1", "rse", "rse_scripts"]
 
 [tool.setuptools.package-dir]
 tfm_tools = "tools/modules"
 bl2 = "bl2/ext/mcuboot/scripts"
+bl1 = "bl1/bl1_1/scripts"
 rse = "platform/ext/target/arm/rse/common/scripts/modules"
 rse_scripts = "platform/ext/target/arm/rse/common/scripts"
 
