Build: Add `tfm_gen_armclang_shared_symbols` script to TF-M tools
Add `main()` to `tfm_gen_armclang_shared_symbols` and update
`pyproject.toml` for script entry point.

Utilize packaged script instead of hardcoded path in CMake.

Signed-off-by: Mudit Sharma <mudit.sharma@arm.com>
Change-Id: I5a4a6120e5b28ef3134fcebdd3b56a7a28ee831e

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,6 +55,7 @@ sign_then_encrypt_data = "tfm_tools.sign_then_encrypt_data:main"
 sign_data = "tfm_tools.sign_data:main"
 encrypt_data = "tfm_tools.encrypt_data:main"
 c_struct = "tfm_tools.c_struct:main"
+tfm_gen_armclang_shared_symbols = "tfm_tools.tfm_gen_armclang_shared_symbols:main"
 
 rse_create_blob_message = "rse_scripts.create_blob_message:main"
 rse_create_cm_provisioning_bundle = "rse_scripts.create_cm_provisioning_bundle:main"
