BL1: fix "bl1_2_padded.bin" build dependency regression
Commit abed0324de69 ("Build: LLVM toolchain support for MPS4 platforms",
2025-01-17) removed "$<TARGET_FILE_DIR:bl1_2>/bl1_2.bin" from the list of
pre-requisites of "bl1_2_padded.bin".

(

  I claim that this was unintended, or an oversight anyway, as commit
  abed0324de69 did not change the "--input_file
  $<TARGET_FILE_DIR:bl1_2>/bl1_2.bin" option of the "create_bl1_2_img.py"
  script -- in other words, the dependency would remain in place,
  semantically speaking.

  For comparison, see "bl1_provisioning_bundle.bin", in the same
  "CMakeLists.txt": the "bl1_1_create_provisioning_bundle" script takes
  "$<TARGET_FILE_DIR:bl1_2>/bl1_2_padded.bin" as input, and indeed that
  file is listed with DEPENDS.

)

As a consequence, if we now

- build a platform containing BL1_2,

- change BL1_2,

- *incrementally* rebuild the platform,

then the refreshed "bl1_2.bin" does not propagate to "bl1_2_padded.bin",
and ultimately "combined_provisioning_message.bin" becomes stale.

Restore the missing dependency.

(

  We can't simply reinsert "$<TARGET_FILE_DIR:bl1_2>/bl1_2.bin"; we have
  to consider commit 85b135abc4a0 ("cmake: Define missing OUTPUT files",
  2025-09-26), and refer to "${bin_dir}/bl1_2.bin".

  The context differs additionally due to commit 44fa10646e57 ("Build: Use
  packaged BL1 scripts", 2025-09-26).

)

Reproducer:

  rm -rf venv
  python3 -m venv venv
  source venv/bin/activate
  pip install -e .

  rm -rf build
  cmake -S . -B build -DTFM_PLATFORM=rd1ae -DTFM_DUMMY_PROVISIONING=ON

  cmake --build build -j6
  sha256sum build/bin/provisioning/combined_provisioning_message.bin

  sed -i 's/Starting TF-M BL1_2/starting TF-M BL1_2/' bl1/bl1_2/main.c

  cmake --build build -j6
  sha256sum build/bin/provisioning/combined_provisioning_message.bin

Before the patch, both sha256sum commands output the same hash. With the
fix applied, the hashes differ, due to the change in "bl1/bl1_2/main.c"
(from "sed") prop

--- a/bl1/bl1_1/CMakeLists.txt
+++ b/bl1/bl1_1/CMakeLists.txt
@@ -90,7 +90,7 @@ add_custom_target(bl1_2_padded_bin
 
 add_custom_command(OUTPUT bl1_2_padded.bin bl1_2_padded_hash.bin
     OUTPUT ${bin_dir}/bl1_2_padded.bin ${bin_dir}/bl1_2_padded_hash.bin
-    DEPENDS bl1_2_bin signing_layout_bl1_2
+    DEPENDS ${bin_dir}/bl1_2.bin bl1_2_bin signing_layout_bl1_2
     COMMAND bl1_1_create_bl1_2_image
                     --input_file ${bin_dir}/bl1_2.bin
                     --img_output_file bl1_2_padded.bin
