Build: Add strncmp() to TF-M CRT
Recently used in the project but missing from TF-M’s CRT.
Added to support the move away from external libc dependencies.

Signed-off-by: Anton Komlev <anton.komlev@arm.com>
Change-Id: Id47a3eea3cc1c1f0f76b220e1294e3c0ca891152

--- a/secure_fw/partitions/lib/runtime/CMakeLists.txt
+++ b/secure_fw/partitions/lib/runtime/CMakeLists.txt
@@ -31,6 +31,7 @@ target_sources(tfm_sprt
         service_api.c
         ${CMAKE_SOURCE_DIR}/secure_fw/shared/crt_memcpy.c
         ${CMAKE_SOURCE_DIR}/secure_fw/shared/crt_memset.c
+        ${CMAKE_SOURCE_DIR}/secure_fw/shared/crt_strncmp.c
         $<$<BOOL:${CONFIG_TFM_PARTITION_META}>:./sprt_partition_metadata_indicator.c>
         $<$<BOOL:${CONFIG_TFM_SPM_BACKEND_IPC}>:./sfn_common_thread.c>
         $<$<BOOL:${CONFIG_TFM_SPM_BACKEND_IPC}>:./psa_api_ipc.c>
