BL1_2: Add config option to bind BL2 image
Signed-off-by: Maulik Patel <maulik.patel@arm.com>
Change-Id: I9705273a6077aae804fc66a1d837962164b3bdd7

--- a/bl1/Kconfig
+++ b/bl1/Kconfig
@@ -51,6 +51,10 @@ config TFM_BL1_MEMORY_MAPPED_FLASH
     bool "BL1 Access flash content"
     default y
 
+config TFM_BL1_2_IMAGE_BINDING
+    bool "Enable BL2 image binding with AES-CMAC"
+    default n
+
 config TFM_BL1_DEFAULT_OTP
     bool
     default y
