BL2: Switch to tfm feature branch based on v2.2.0
- Use the 'tfm' feature branch which is based on the v2.2.0
  release tag and contains all the commits that TF-M otherwise
  applies for MCUboot as patches,

- Delete all MCUboot patch files as these modifications
  are already present on the feature branch,

- Fix MCUboot submodule handling in CMake.

Change-Id: I275ceb7c146bb99a15dea1af5b0a4d461222e367
Signed-off-by: David Vincze <david.vincze@arm.com>

--- a/bl2/ext/mcuboot/CMakeLists.txt
+++ b/bl2/ext/mcuboot/CMakeLists.txt
@@ -18,8 +18,16 @@ fetch_remote_library(
         GIT_REPOSITORY      https://github.com/mcu-tools/mcuboot.git
         GIT_TAG             ${MCUBOOT_VERSION}
         GIT_PROGRESS        TRUE
-        GIT_SUBMODULES      "${MCUBOOT_SUBMODULES}"
+        GIT_SHALLOW         TRUE
+        GIT_SUBMODULES      "docs"
 )
+
+# FIXME: There's a bug in CMake which causes the empty value of GIT_SUBMODULES to be handled
+# incorrectly (https://gitlab.kitware.com/cmake/cmake/-/issues/20579,
+# https://gitlab.kitware.com/cmake/cmake/-/issues/25972). As a result Git submodules are still
+# processed in MCUboot. As a temporary workaround specify the "docs" folder (not containing
+# any submodules) - the fix is available from CMake version 3.31.0,
+# related policy: https://cmake.org/cmake/help/latest/policy/CMP0174.html
 
 add_library(mcuboot_config INTERFACE)
 
