Python: Add missing package required for imgtool
- PKCS#11 support for ECDSA P384 keys was recently added
 to MCUboot which introduced this new dependency,

- Update uv lockfile.

Change-Id: I280e56df1a58bad451784d7eb70a254d962a103b
Signed-off-by: David Vincze <david.vincze@arm.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,8 @@ dependencies = [
     "rich (>=13.9.4,<14.0.0)",
     "libclang (>=18.1.1,<19.0.0)",
     "pandas==2.3.1",
-    "numpy==2.2.6"
+    "numpy==2.2.6",
+    "python-pkcs11==0.8.1"
 ]
 
 [project.optional-dependencies]
