Crypto: bl1: clarify the use of base and platform mbedtls config file
This change clarifies the use of BL1 Mbed TLS configuration file:
- mbedcrypto_base_config.h: is common to all platforms and has the bare
  minimum configuration options e.g LMS.
- mbedcrypto_platform_config.h: platform specific configuration which
  can be specified by USER_MBEDTLS_CONFIG_FILE, its purpose is to extend
  or override the above base configuration.

Change-Id: Ib074110cae4146d8d4b4127bfcdf29f7688a1161
Signed-off-by: Amjad Ouled-Ameur <amjad.ouled-ameur@arm.com>

--- a/bl1/bl1_1/shared_lib/CMakeLists.txt
+++ b/bl1/bl1_1/shared_lib/CMakeLists.txt
@@ -73,7 +73,11 @@ target_include_directories(bl1_1_psa_crypto_interface
 
 target_compile_definitions(bl1_1_psa_crypto_interface
     INTERFACE
-        MBEDTLS_CONFIG_FILE="mbedcrypto_config.h"
+        # This is the base Mbed TLS configuration file for all platforms,
+        # platforms may extend or override it by setting MBEDTLS_USER_CONFIG_FILE
+        # to the platform-specific configuration file.
+        MBEDTLS_CONFIG_FILE="mbedcrypto_base_config.h"
+
         # Workaround for https://github.com/ARMmbed/mbedtls/issues/1077
         $<$<OR:$<STREQUAL:${CMAKE_SYSTEM_ARCHITECTURE},armv8-m.base>,$<STREQUAL:${CMAKE_SYSTEM_ARCHITECTURE},armv6-m>>:MULADDC_CANNOT_USE_R7>
 )
