BL2: Update Signature key policy functionality
For mcuboot multi-signature support, update the key
policy functionality to iterate through all the keys, retrieve
associated policy, and check verfication against the policy.

Signed-off-by: Maulik Patel <maulik.patel@arm.com>
Change-Id: Idbbdee33063e153da5934511edd134e3762c6a6c

--- a/bl2/CMakeLists.txt
+++ b/bl2/CMakeLists.txt
@@ -114,6 +114,7 @@ add_library(bl2_crypto STATIC ${BL2_CRYPTO_SRC})
 target_compile_definitions(bl2_crypto
     PRIVATE
         $<$<BOOL:${MCUBOOT_ROTPK_SIGN_POLICY}>:MCUBOOT_ROTPK_SIGN_POLICY>
+        MAX_KEYS_PER_IMAGE=${MCUBOOT_ROTPK_MAX_KEYS_PER_IMAGE}
 )
 
 target_include_directories(bl2_crypto
