--- a/bl2/ext/mcuboot/include/mcuboot_config/mcuboot_config.h.in
+++ b/bl2/ext/mcuboot/include/mcuboot_config/mcuboot_config.h.in
@@ -33,7 +33,9 @@ extern "C" {
 #define MCUBOOT_USE_FLASH_AREA_GET_SECTORS
 #define MCUBOOT_TARGET_CONFIG "flash_layout.h"
 
+#ifndef MCUBOOT_IMAGE_MULTI_SIG_SUPPORT
 #cmakedefine MCUBOOT_IMAGE_MULTI_SIG_SUPPORT
+#endif /* MCUBOOT_IMAGE_MULTI_SIG_SUPPORT */
 
 /*— How many RoTPK keys per image —*/
 #define MCUBOOT_ROTPK_MAX_KEYS_PER_IMAGE  @MCUBOOT_ROTPK_MAX_KEYS_PER_IMAGE@
