BL1_2: Add support for image binding when BL2 not encrypted
So for option:
TFM_BL1_KEY_BL2_ENCRYPTION=OFF, TFM_BL1_2_IMAGE_BINDING=ON
The image binding works as follows:

First boot (after asymmetric verify)
* Digest the image (plaintext-at-rest)
* Derive binding MAC key (distinct label, and device specific key)
* Compute tag with AES-CMAC
* Store tag

Subsequent boots
* If tag found, then verify tag and skip asymmetric verification

Signed-off-by: Maulik Patel <maulik.patel@arm.com>
Change-Id: If926e9d6c68a0f72c192d7a562886a42effda335

--- a/bl1/bl1_2/CMakeLists.txt
+++ b/bl1/bl1_2/CMakeLists.txt
@@ -42,6 +42,7 @@ target_link_options(bl1_2
 target_sources(bl1_2
     PRIVATE
         main.c
+        $<$<BOOL:${TFM_BL1_2_IMAGE_BINDING}>:bl1_2_image_binding.c>
         $<$<BOOL:${CONFIG_GNU_SYSCALL_STUB_ENABLED}>:${CMAKE_SOURCE_DIR}/platform/ext/common/syscalls_stub.c>
         $<$<C_COMPILER_ID:GNU,Clang>:${CMAKE_SOURCE_DIR}/secure_fw/partitions/lib/runtime/crt_start.c>
         ${CMAKE_SOURCE_DIR}/secure_fw/shared/crt_memset.c
