--- a/platform/CMakeLists.txt
+++ b/platform/CMakeLists.txt
@@ -445,7 +445,7 @@ target_compile_definitions(platform_region_defs
         $<$<BOOL:${TFM_BL1_2_IMAGE_ENCRYPTION}>:TFM_BL1_2_IMAGE_ENCRYPTION>
         $<$<BOOL:${TFM_BL1_2_EMBED_ROTPK_IN_IMAGE}>:TFM_BL1_2_EMBED_ROTPK_IN_IMAGE>
         $<$<BOOL:${TFM_BL1_2_ENABLE_ROTPK_POLICIES}>:TFM_BL1_2_ENABLE_ROTPK_POLICIES>
-        $<$<BOOL:${TFM_BL1_2_IMAGE_ENCRYPTION}>:TFM_BL1_2_IMAGE_ENCRYPTION>
+        $<$<BOOL:${TFM_BL1_2_IMAGE_BINDING}>:TFM_BL1_2_IMAGE_BINDING>
         $<$<BOOL:${TFM_BL1_2_SIGNER_AMOUNT}>:TFM_BL1_2_SIGNER_AMOUNT=${TFM_BL1_2_SIGNER_AMOUNT}>
         $<$<BOOL:${TFM_BL1_2_ECDSA_CURVE}>:TFM_BL1_2_ECDSA_CURVE=TFM_BL1_CURVE_${TFM_BL1_2_ECDSA_CURVE}>
         $<$<BOOL:${TFM_BL1_2_MEASUREMENT_HASH_ALG}>:TFM_BL1_2_MEASUREMENT_HASH_ALG=TFM_BL1_HASH_ALG_${TFM_BL1_2_MEASUREMENT_HASH_ALG}>
