Build: Remove crt0 and libc from secure binaries
- Replace default standard libraries and startup files and use minimal
  custom implementations for better control and smaller footprint.
- Add INTERFACE targets to toolchains to carry on specific
  compiler/linker options to bl1, bl2, tfm_s binaries
- Add CONFIG_TFM_INCLUDE_STDLIBC option to allow platforms to include
  standard libraries if required.
- Disable this feature and include stdlibc on some platforms to maintain
  CI build compatibility. Further work is needed to enable it there.
- Clean TFM_BSS section in GNUARM toolchain

Signed-off-by: Anton Komlev <anton.komlev@arm.com>
Change-Id: Idcd179a157459b48453f464c5924cb48befa5e7a

--- a/bl1/bl1_2/CMakeLists.txt
+++ b/bl1/bl1_2/CMakeLists.txt
@@ -43,6 +43,9 @@ target_sources(bl1_2
     PRIVATE
         main.c
         $<$<BOOL:${CONFIG_GNU_SYSCALL_STUB_ENABLED}>:${CMAKE_SOURCE_DIR}/platform/ext/common/syscalls_stub.c>
+        $<$<C_COMPILER_ID:GNU,Clang>:${CMAKE_SOURCE_DIR}/secure_fw/partitions/lib/runtime/crt_start.c>
+        ${CMAKE_SOURCE_DIR}/secure_fw/shared/crt_memset.c
+        ${CMAKE_SOURCE_DIR}/secure_fw/shared/crt_memcpy.c
 )
 
 target_link_libraries(bl1_2
@@ -52,6 +55,7 @@ target_link_libraries(bl1_2
         platform_bl1_1_interface
         platform_bl1_2
         $<$<AND:$<BOOL:${TEST_BL1_2}>,$<BOOL:${PLATFORM_DEFAULT_BL1_2_TESTS}>>:bl1_2_tests>
+        bl1_build_flags
 )
 
 target_compile_definitions(bl1_2
